/fix mainpage responsive for too big image

--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -56,7 +56,7 @@
 
 .grid_section img {
     width: 80%;
-    max-width: 400px;
+    max-width: 320px;
     height: auto;
 }
 
